--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,22 +1,17 @@
-
-  body, html{
-    width: 100%;
-    height: 100vh;
-  }
-
 .layout {
-
-  display: grid;
-  grid:
-    "header header header" auto
-    "leftSide body rightSide" 1fr
-    "footer footer footer" auto
-    / auto 1fr auto;
-  gap: 4px;
-}
-
-.header { grid-area: header;}
-.leftSide { grid-area: leftSide; background: yellow;}
-.body { grid-area: body; background: red;}
-.rightSide { grid-area: rightSide; background: green;}
-.footer { grid-area: footer; background: orange;}
+    width: 100%;
+  
+    display: grid;
+    grid:
+      "header header header" auto
+      "leftSide body rightSide" 1fr
+      "footer footer footer" auto
+      / auto 1fr auto;
+    gap: 8px;
+  }
+  
+  .header { grid-area: header; }
+  .leftSide { grid-area: leftSide; }
+  .body { grid-area: body; }
+  .rightSide { grid-area: rightSide; }
+  .footer { grid-area: footer; }
